labanhMinh/w10-d1-d2-k8s-security-lab/d2-supply-chain/unsigned-image-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unsigned-image-demo
  namespace: w10-security-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unsigned-image-demo
  template:
    metadata:
      labels:
        app: unsigned-image-demo
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: ghcr.io/OWNER/REPO/demo-app:unsigned
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
