labanhMinh/w10-d1-d2-k8s-security-lab/d2-supply-chain/kyverno-verify-signed-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-signed-images
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: require-cosign-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - w10-security-lab
      verifyImages:
        - imageReferences:
            - "ghcr.io/OWNER/REPO/*"
          mutateDigest: true
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/OWNER/REPO/.github/workflows/w10-supply-chain-demo.yml@refs/heads/main"
                    issuer: "https://token.actions.githubusercontent.com"
